--- a/public/email.html
+++ b/public/email.html
@@ -4,80 +4,102 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Early Access</title>
-</head>
-<style>body {
-    margin: 0;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(135deg, #ff008c, #ffbf00, #00eaff, #8a2be2);
-    background-size: 400% 400%;
-    animation: gradientMove 12s ease infinite;
-    font-family: "Inter", sans-serif;
-  }
-  
-  @keyframes gradientMove {
-    0% { background-position: 0% 50%; }
-    50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
-  }
-  
-  .container {
-    background: rgba(255, 255, 255, 0.15);
-    padding: 35px;
-    border-radius: 16px;
-    backdrop-filter: blur(10px);
-    text-align: center;
-    width: 350px;
-    box-shadow: 0 0 20px rgba(255,255,255,0.2);
-  }
-  
-  h2 {
-    color: white;
-    font-size: 20px;
-    margin-bottom: 20px;
-  }
-  
-  input {
-    width: 100%;
-    padding: 12px;
-    border-radius: 10px;
-    border: none;
-    font-size: 16px;
-    outline: none;
-    margin-bottom: 10px;
-    box-shadow: 0 0 10px rgba(255,255,255,0.3);
-  }
-  
-  button {
-    width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 10px;
-    background: white;
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.2s;
-  }
-  
-  button:hover {
-    background: #f4f4f4;
-    transform: scale(1.05);
-  }
-  
-  #errorMsg {
-    color: #ff4b4b;
-    font-size: 14px;
-    height: 16px;
-  }
-  
-  #successMsg {
-    margin-top: 10px;
-    color: #00ffbf;
-    font-size: 14px;
-    height: 16px;
-  }
+  <style>
+    body {
+      margin: 0;
+      min-height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #ff008c, #ffbf00, #00eaff, #8a2be2);
+      background-size: 400% 400%;
+      animation: gradientMove 12s ease infinite;
+      font-family: "Inter", sans-serif;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    @keyframes gradientMove {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    .container {
+      background: rgba(255, 255, 255, 0.15);
+      padding: 25px 20px;
+      border-radius: 16px;
+      backdrop-filter: blur(10px);
+      text-align: center;
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 0 20px rgba(255,255,255,0.2);
+      box-sizing: border-box;
+    }
+
+    h2 {
+      color: white;
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      border-radius: 10px;
+      border: none;
+      font-size: 16px;
+      outline: none;
+      margin-bottom: 10px;
+      box-shadow: 0 0 10px rgba(255,255,255,0.3);
+      box-sizing: border-box;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 10px;
+      background: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.2s;
+      font-size: 16px;
+    }
+
+    button:hover {
+      background: #f4f4f4;
+      transform: scale(1.05);
+    }
+
+    #errorMsg {
+      color: #ff4b4b;
+      font-size: 14px;
+      height: 16px;
+    }
+
+    #successMsg {
+      margin-top: 10px;
+      color: #00ffbf;
+      font-size: 14px;
+      height: 16px;
+    }
+
+    /* ===== Mobile Adjustments ===== */
+    @media (max-width: 480px) {
+      .container {
+        padding: 20px 15px;
+      }
+
+      input, button {
+        font-size: 14px;
+        padding: 10px;
+      }
+
+      h2 {
+        font-size: 18px;
+      }
+    }
   </style>
 <body>
   <div class="container">
