--- a/public/email.html
+++ b/public/email.html
@@ -37,7 +37,7 @@
       box-sizing: border-box;
     }
 
-    h2 {
+    h2,h3 {
       color: white;
       font-size: 20px;
       margin-bottom: 20px;
@@ -103,7 +103,9 @@
   </style>
 <body>
   <div class="container">
-    <h2>Give us your best Email if you'd like early access</h2>
+    <h2>To join this study, kindly let us know your name and your best e-mail</h2><br>
+
+      <h3>Bonus: early access to Inclusio</h3>
 
     <form id="emailForm">
       <input 
