--- a/public/email.html
+++ b/public/email.html
@@ -163,6 +163,17 @@
 
 
   <script>
+      if (performance.navigation.type === 1) {
+    // 1 = Reload
+    window.location.replace("index.html");
+  }
+
+  // BLOCK BACK BUTTON
+  window.history.pushState(null, "", window.location.href);
+  window.onpopstate = function () {
+    // When back button is pressed → go home
+    window.location.replace("index.html");
+  };
     const form = document.getElementById("emailForm");
     const emailInput = document.getElementById("emailInput");
     const nameInput = document.getElementById("nameInput");
